<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.Home">

    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/action_about"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_home"
        android:checkable="false"
        android:checked="false"
        android:orderInCategory="100"
        android:title="@string/action_home"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_profile"
        android:checkable="false"
        android:checked="false"
        android:orderInCategory="100"
        android:title="@string/action_profile"
        app:showAsAction="never" />
</menu>
