<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.firstacademy.piofx.fragments.Profile">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/login_bg_color"
        android:orientation="vertical"
        android:paddingLeft="@dimen/dp_20"
        android:paddingRight="@dimen/dp_20"
        android:paddingTop="@dimen/dp_20">

        <TextView
            android:id="@+id/profile_tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Welcome Pratyusha!"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_16"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_profile"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_14"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginBottom="@dimen/dp_15">
            <Button
                android:id="@+id/profile_rateUs"
                android:layout_width="@dimen/dp_80"
                android:layout_height="@dimen/dp_25"
                android:background="@color/button_bg_color"
                android:text="@string/rate_us"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sp_12"/>
            <Button
                android:id="@+id/profile_share_app"
                android:layout_width="@dimen/dp_100"
                android:layout_height="@dimen/dp_25"
                android:background="@color/sky_color"
                android:text="@string/share_app"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sp_12"
                android:layout_marginLeft="@dimen/dp_5"/>
        </LinearLayout>
    </LinearLayout>
        <ImageView
            android:layout_width="@dimen/dp_80"
            android:layout_height="@dimen/dp_80"
            android:src="@mipmap/profile"
            android:layout_marginRight="@dimen/dp_20"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"/>
    </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_20"
            android:paddingTop="@dimen/dp_10"
            android:paddingBottom="@dimen/dp_10"
            android:paddingLeft="@dimen/dp_15"
            android:background="@color/personal_details_bgcolor">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/personal_details"
                android:textColor="@android:color/black"
                android:textSize="@dimen/sp_20"
                android:layout_marginBottom="@dimen/dp_10"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="a"
                    android:textSize="@dimen/sp_20"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textSize="@dimen/sp_18"
                    android:layout_marginLeft="@dimen/dp_20"
                    android:textColor="@color/light_gray"/>\
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Pratyusha Simharaju"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_16"
                android:layout_marginLeft="@dimen/dp_30"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/dp_10">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="b"
                    android:textSize="@dimen/sp_20"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textSize="@dimen/sp_18"
                    android:layout_marginLeft="@dimen/dp_20"
                    android:textColor="@color/light_gray"/>\
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Pratyusha@gmail.com"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_16"
                android:layout_marginLeft="@dimen/dp_30"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/dp_10">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="c"
                    android:textSize="@dimen/sp_20"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/photo"
                    android:textSize="@dimen/sp_18"
                    android:layout_marginLeft="@dimen/dp_20"
                    android:textColor="@color/light_gray"/>\
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="@dimen/dp_80"
                    android:layout_height="@dimen/dp_80"
                    android:src="@mipmap/profile"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/dp_20"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_vertical"
                    android:layout_gravity="center_vertical">
                    <Button
                        android:id="@+id/profile_change_photo"
                        android:layout_width="@dimen/dp_100"
                        android:layout_height="@dimen/dp_25"
                        android:background="@color/agri_green"
                        android:text="@string/change_photo"
                        android:textAllCaps="false"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/sp_12"/>
                    <Button
                        android:id="@+id/profile_remove_photo"
                        android:layout_width="@dimen/dp_100"
                        android:layout_height="@dimen/dp_25"
                        android:background="@color/dark_red"
                        android:text="@string/remove_photo"
                        android:textAllCaps="false"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/sp_12"
                        android:layout_marginTop="@dimen/dp_5"/>
                </LinearLayout>
             </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_20"
            android:paddingTop="@dimen/dp_10"
            android:paddingBottom="@dimen/dp_10"
            android:paddingLeft="@dimen/dp_15"
            android:background="@color/app_settings_bg_color">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_settings"
                android:textColor="@android:color/black"
                android:textSize="@dimen/sp_20"
                android:layout_marginBottom="@dimen/dp_5"/>

            <Button
                android:id="@+id/profile_reset_progress"
                android:layout_width="@dimen/dp_100"
                android:layout_height="@dimen/dp_25"
                android:background="@color/dark_red"
                android:text="@string/reset_progress"
                android:textAllCaps="false"
                android:layout_marginTop="@dimen/dp_5"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sp_12" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset_desc"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_12"
                android:layout_marginTop="@dimen/dp_5"/>

            <Button
                android:id="@+id/profile_sign_out"
                android:layout_width="@dimen/dp_100"
                android:layout_height="@dimen/dp_25"
                android:background="@color/darker_gray"
                android:text="@string/sign_out"
                android:textAllCaps="false"
                android:layout_marginTop="@dimen/dp_5"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sp_12" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_out_desc"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_12"
                android:layout_marginTop="@dimen/dp_5"/>


        </LinearLayout>
    </LinearLayout>
    </ScrollView>
</RelativeLayout>
