<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.firstacademy.piofx.fragments.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/login_bg_color"
            android:orientation="vertical"
            android:paddingLeft="@dimen/dp_20"
            android:paddingRight="@dimen/dp_20"
            android:paddingTop="@dimen/dp_20">
            <com.firstacademy.piofx.fonts.openSans.OpenSansRegular
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logn_info"
                android:textColor="@android:color/white"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginBottom="@dimen/dp_10">
                <Button
                    android:id="@+id/fhome_bnSignup"
                    android:layout_width="@dimen/dp_100"
                    android:layout_height="@dimen/dp_25"
                    android:background="@color/button_bg_color"
                    android:text="@string/sign_up"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/sp_14"/>
                <com.firstacademy.piofx.fonts.openSans.OpenSansBold
                    android:id="@+id/fhome_tvSingin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in"
                    android:textColor="@color/sky_color"
                    android:paddingLeft="@dimen/dp_10" />
            </LinearLayout>
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:scrollbars="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/fhome_recycler"
            android:layout_marginTop="@dimen/dp_3">
        </android.support.v7.widget.RecyclerView>
    </LinearLayout>

</RelativeLayout>
