<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.firstacademy.piofx.fragments.AboutUs"
    android:background="@color/colorMediumTurquoise">

    <RelativeLayout
        android:id="@+id/faboutus_meet_team_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_65"
        android:background="#00B1BE"
        android:layout_alignParentBottom="true">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?android:attr/selectableItemBackground">

            <com.firstacademy.piofx.fonts.patua.PatuaRegular
                android:id="@+id/faboutus_bottom_layout_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/meet_the_team"
                android:textSize="@dimen/sp_25"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:layout_centerInParent="true"/>
        </RelativeLayout>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/faboutus_meet_team_layout">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="@dimen/dp_60"
            android:layout_marginBottom="@dimen/dp_30">
            <ImageView
                android:layout_width="@dimen/dp_200"
                android:layout_height="@dimen/dp_200"
                android:src="@drawable/about" />

            <com.firstacademy.piofx.fonts.patua.PatuaRegular
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/made_with_love"
                android:layout_marginTop="@dimen/dp_20"
                android:textColor="@color/red"
                android:textSize="@dimen/sp_18"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_20"
                android:src="@drawable/about_piofx"
                android:layout_marginTop="@dimen/dp_15"/>

            <com.firstacademy.piofx.fonts.patua.PatuaRegular
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aboutus_desc"
                android:textAlignment="center"
                android:layout_marginTop="@dimen/dp_20"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sp_16"
                android:paddingLeft="@dimen/dp_20"
                android:paddingRight="@dimen/dp_20"/>

            <com.firstacademy.piofx.fonts.patua.PatuaRegular
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aboutus_desc2"
                android:textAlignment="center"
                android:layout_marginTop="@dimen/dp_30"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sp_16"
                android:paddingLeft="@dimen/dp_20"
                android:paddingRight="@dimen/dp_20"
                android:paddingBottom="@dimen/dp_30"
                android:layout_marginBottom="@dimen/dp_30"/>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
