<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <LinearLayout
        android:id="@+id/top_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:layout_marginBottom="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_95"
        android:orientation="vertical">

        <com.firstacademy.piofx.fonts.openSans.OpenSansBold
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/section_complete"
            android:paddingTop="@dimen/dp_80"
            android:paddingLeft="@dimen/dp_20"
            android:paddingRight="@dimen/dp_20"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:textSize="@dimen/sp_24"
            android:textColor="@android:color/white" />
        <com.firstacademy.piofx.fonts.openSans.OpenSansSemiBold
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/take_a_quiz_earn_star"
            android:paddingBottom="@dimen/dp_10"
            android:paddingLeft="@dimen/dp_20"
            android:paddingRight="@dimen/dp_20"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:textSize="@dimen/sp_18"
            android:textColor="@color/login_bg_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/dp_10"
            android:layout_gravity="center"
            android:gravity="center">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="@color/login_bg_color">
                <Button
                    android:id="@+id/section_complete_quiz"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp_36"
                    android:text="@string/goto_quiz"
                    android:textAllCaps="true"
                    android:textColor="@android:color/white"
                    android:paddingLeft="@dimen/dp_16"
                    android:paddingRight="@dimen/dp_16"
                    android:textSize="@dimen/sp_14"
                    android:elevation="@dimen/dp_8"
                    android:background="?attr/selectableItemBackground"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginLeft="@dimen/dp_10"
                android:background="@color/card3_image_bg_color">
                <Button
                    android:id="@+id/section_complete_may_be_later"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp_36"
                    android:text="@string/may_be_later"
                    android:textAllCaps="true"
                    android:textColor="@android:color/white"
                    android:paddingLeft="@dimen/dp_16"
                    android:paddingRight="@dimen/dp_16"
                    android:textSize="@dimen/sp_14"
                    android:elevation="@dimen/dp_8"
                    android:background="?attr/selectableItemBackground"/>
            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_170"
        android:layout_centerHorizontal="true"
        android:src="@drawable/brain_blue"
        android:layout_gravity="center_horizontal"
        android:paddingTop="@dimen/dp_20"/>
</RelativeLayout>
