<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.firstacademy.piofx.activities.SignUp"
    android:background="@color/colorMediumTurquoise">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">
        <RelativeLayout
            android:layout_width="@dimen/dp_50"
            android:layout_height="@dimen/dp_50"
            android:background="@drawable/circle_white"
            android:layout_gravity="center">

            <ImageView
                android:layout_width="@dimen/dp_25"
                android:layout_height="@dimen/dp_25"
                android:layout_centerInParent="true"
                android:src="@mipmap/ic_back_arrow"/>

        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/dp_20"
            android:paddingRight="@dimen/dp_20">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/namweWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/dp_16"
            android:paddingBottom="@dimen/dp_8"
            style="@style/ThemeTextInputLayout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/name"
                android:paddingBottom="@dimen/dp_8"
                android:layout_marginBottom="@dimen/dp_8"
                android:textSize="@dimen/sp_16"/>

        </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/emailWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/dp_16"
                android:paddingBottom="@dimen/dp_8"
                style="@style/ThemeTextInputLayout">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email"
                    android:paddingBottom="@dimen/dp_8"
                    android:layout_marginBottom="@dimen/dp_8"
                    android:textSize="@dimen/sp_16"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/passwordWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/dp_16"
                android:paddingBottom="@dimen/dp_8"
                style="@style/ThemeTextInputLayout">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/password"
                    android:paddingBottom="@dimen/dp_8"
                    android:layout_marginBottom="@dimen/dp_8"
                    android:textSize="@dimen/sp_16"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/retypePasswordWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/dp_16"
                android:paddingBottom="@dimen/dp_8"
                android:textColorHint="@color/dark_sky"
                style="@style/ThemeTextInputLayout">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etretypePassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/retype_pwd"
                    android:paddingBottom="@dimen/dp_8"
                    android:layout_marginBottom="@dimen/dp_8"
                    android:textSize="@dimen/sp_16"/>

            </android.support.design.widget.TextInputLayout>
    </LinearLayout>
    </LinearLayout>
</RelativeLayout>
